--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,25 @@
 <p>This is the home page</p>
+<div id="content">
+    <div class="left-column">
+        <article class="widget-container left">
+            <div class="widget-header">
+                <h1 class="label1">
+                    <p>Popular Games</p>
+                </h1>
+            </div>
+            <div class="widget-content">
+                <mat-grid-list cols="4" rows="2" rowHeight="1:1">
+                    <mat-grid-tile>
+                        <img src="//images.igdb.com/igdb/image/upload/t_cover_big/co545v.jpg">
+                    </mat-grid-tile>
+                    <mat-grid-tile >test</mat-grid-tile>
+                    <mat-grid-tile >test again</mat-grid-tile>
+                 <mat-grid-tile >still testing</mat-grid-tile>
+            </mat-grid-list>
+            </div>
+        </article>
+    </div>
+    <div class="right-column">
+    
+    </div>
+</div>
