--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <article class="widget-container left">
             <div class="widget-header">
                 <h1 class="label1">
-                    <p>Popular Games</p>
+                  <p><em>Popular Games</em></p>
                 </h1>
             </div>
             <div class="widget-content">
