Added to About Us Page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,13 @@
-<p>This is the about us page</p>
+<mat-tab-group color="primary" class="tabs mat-elevation-z4">
+    <mat-tab label="Our Mission"> <h2>This is a website designed to be a database and community. 
+        It will take inspiration from the popular forum/database website titled MyAnimeList. 
+        Our goal is to create a place where people of similar interests can come together to keep track of, rank, and share games
+            they have played and enjoyed. </h2> </mat-tab>
+    <mat-tab label="Our Features"> <h2>The website will update with a list of all documented games from a database
+            and allow users to share their personal rankings, comments, playtime, and any critiques of the game. 
+        Users will also be able to access the same data shared by the community and connect with 
+            other users to compare thoughts and statistics.  
+        We plan to use an existing database of games (such as igdb.com) to extract metadata about the games.  </h2> </mat-tab>
+    <mat-tab label="Our Plans"> <h2> Our first priority will be to establish a working database and ensure that we can extrapolate data from it. 
+        Additionally, we will focus on communication between front end and back end to make sure both sides stay on track. </h2> </mat-tab>
+</mat-tab-group>
