--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <p>This is the home page</p>
+<app-game></app-game>
 <div id="content">
     <div class="left-column">
         <article class="widget-container-left">
