Updated game service and component

--- a/src/app/util/game/game.component.html
+++ b/src/app/util/game/game.component.html
@@ -2,6 +2,6 @@
 <button mat-button (click)="clear(); showGames()">Get Games</button>
 <div>
     <span *ngIf="game">
-        <p>Game Name: {{game.Name}}</p>
+        <p>Game Name: {{game.name}}</p>
     </span>
 </div>
