--- a/src/app/top-games/top-games.component.html
+++ b/src/app/top-games/top-games.component.html
@@ -1,2 +1,31 @@
 <p>This is the top games page</p>
 <app-game></app-game>
+    <div id="content">
+        <article class="top_container">
+            <!-- Rank column -->
+            <table mat-table [dataSource]="dataSource">
+                <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef> Rank </th>
+                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+                <!-- Score column -->
+                <ng-container matColumnDef="score">
+                    <th mat-header-cell *matHeaderCellDef> Score </th>
+                    <td mat-cell *matCellDef="let element"> {{element.score}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+
+                <mat-paginator [pageSizeOptions]="[10, 20, 30]" 
+                    showFirstLastButtons 
+                    aria-label="Select page of top games">
+                </mat-paginator>
+        </article>
+    </div>
