--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,6 +62,19 @@
                         <p><em>Top Rated </em></p>
                     </h1>
                 </div>
+                <mat-list>
+                    <mat-list-item>
+                     <div matListItemTitle>Best Game of All Time</div>
+                     GOAT
+                    </mat-list-item> 
+                    <mat-divider></mat-divider>
+                    <mat-list-item>
+                     <div matListItemTitle>Minecraft</div>
+                     Classic
+                    </mat-list-item> 
+                    <div class="spacer"></div>
+                    <button mat-raised-button color="primary" routerLink="/top-games" routerLinkActive="active" ariaCurrentWhenActive="page">More Top Rated Games</button>
+                </mat-list>
             </article>
         </article>
     </div>
