--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -41,7 +41,7 @@
                 </div>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-raised-button click="signup()" color="accent" class="btn">Sign Up</button>
+                <button mat-raised-button (click)="signup()" color="accent" class="btn">Sign Up</button>
             </mat-card-actions>
         </form>
     </mat-card>
