Added form html for user component

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <p>This is the sign-up page</p>
-<div class="signup_container">
+<!-- <div class="signup_container">
     <mat-card class="box">
         <mat-card-header class="signup_header">
             <mat-card-title>Sign Up</mat-card-title>
@@ -45,4 +45,6 @@
             </mat-card-actions>
         </form>
     </mat-card>
-</div>
+</div> -->
+
+<app-user></app-user>
