--- a/src/app/top-games/top-games.component.html
+++ b/src/app/top-games/top-games.component.html
@@ -3,10 +3,10 @@
     <div id="content">
         <article class="top_container">
             <!-- Rank column -->
-            <table mat-table [dataSource]="dataSource">
+            <table mat-table [dataSource]="data">
                 <ng-container matColumnDef="position">
                     <th mat-header-cell *matHeaderCellDef> Rank </th>
-                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                 </ng-container>
                 <!-- Name Column -->
                 <ng-container matColumnDef="name">
@@ -16,7 +16,7 @@
                 <!-- Score column -->
                 <ng-container matColumnDef="score">
                     <th mat-header-cell *matHeaderCellDef> Score </th>
-                    <td mat-cell *matCellDef="let element"> {{element.score}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
