--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,76 +1,92 @@
-<p>This is the home page</p>
-<div id="content">
-    <div class="left-column">
+<!--TODO: Beautify-->
+<span *ngIf="dataSource">
+    <!-- Left side of the home page-->
+    <div class="left-column"> 
+
+        <!-- Games Widget-->
         <article class="widget-container-left">
+            <!-- Popular Games Header-->
             <div class="widget-header">
                 <h1 class="label1">
-                  <p><em>Popular Games</em></p>
+                <p><em>Popular Games</em></p>
                 </h1>
             </div>
+            <!-- Popular Games Content-->
             <div class="widget-content">
                 <mat-grid-list cols="4" rows="2" rowHeight="1:1">
-                    <mat-grid-tile>
-                    </mat-grid-tile>
-                    <mat-grid-tile >test</mat-grid-tile>
-                    <mat-grid-tile >test again</mat-grid-tile>
-                 <mat-grid-tile >still testing</mat-grid-tile>
-            </mat-grid-list>
+                    <!--TODO: Put in popular games-->
+                </mat-grid-list>
             </div>
         </article>
+
         <div class="spacer"></div>
+
+        <!-- Games Widget-->
         <article class ="widget-container-left">
+            <!-- Recently Released Header-->
             <div class="widget-header">
                 <h1 class="label1">
                     <p><em>Recently Released</em></p>
                 </h1>
             </div>
+            <!-- Recently Released Content-->
             <div class="widget-content">
                 <mat-grid-list cols="4" rows="2" rowHeight="1:1">
-                    <mat-grid-tile>
-                    </mat-grid-tile>
-                    <mat-grid-tile ></mat-grid-tile>
-                    <mat-grid-tile ></mat-grid-tile>
-                 <mat-grid-tile ></mat-grid-tile>
-            </mat-grid-list>
+                    <img class="gameImage" src="{{dataSource[0].background_image}}">
+                    <img class="gameImage" src="{{dataSource[1].background_image}}">
+                    <img class="gameImage" src="{{dataSource[2].background_image}}">
+                    <img class="gameImage" src="{{dataSource[3].background_image}}">
+                </mat-grid-list>
             </div>
         </article>
+
         <div class="spacer"></div>
+
+        <!-- Review and Top Rated Widget-->
         <article class="widget-containter-left2">
-            <article class="left-list">
+            <!--Review Widget-->
+            <article class="review-list">
+                <!--Review Header-->
                 <div class ="list-header">
                     <h1 class="label2">
                         <p><em>New Reviews</em></p>
                     </h1>
                 </div>
+                <!--Review Content-->
                 <mat-list>
                     <mat-list-item>
-                     <div matListItemTitle>First Review</div>
-                     This game was great!
+                    <div matListItemTitle>First Review</div>
+                    This game was great!
                     </mat-list-item> 
                     <mat-divider></mat-divider>
                     <mat-list-item>
-                     <div matListItemTitle>Second Review</div>
-                     Terrible
+                    <div matListItemTitle>Second Review</div>
+                    Terrible
                     </mat-list-item> 
                     <mat-divider></mat-divider>
                 </mat-list>
             </article>
+
             <div class="spacer"></div>
-            <article class="right-list">
+
+            <!--Top Rated Widget-->
+            <article class="toprated-list">
+                <!--Top Rated Header-->
                 <div class ="list-header">
                     <h1 class="label2">
                         <p><em>Top Rated </em></p>
                     </h1>
                 </div>
+                <!--Top Rated Content-->
                 <mat-list>
                     <mat-list-item>
-                     <div matListItemTitle>Best Game of All Time</div>
-                     GOAT
+                    <div matListItemTitle>Best Game of All Time</div>
+                    GOAT
                     </mat-list-item> 
                     <mat-divider></mat-divider>
                     <mat-list-item>
-                     <div matListItemTitle>Minecraft</div>
-                     Classic
+                    <div matListItemTitle>Minecraft</div>
+                    Classic
                     </mat-list-item> 
                     <div class="spacer"></div>
                     <button mat-raised-button color="primary" routerLink="/top-games" routerLinkActive="active" ariaCurrentWhenActive="page">More Top Rated Games</button>
@@ -78,6 +94,7 @@
             </article>
         </article>
     </div>
+
     <div class="right-column">
         <article class="widget-container-right">
             <div class="widget-header2">
@@ -87,31 +104,31 @@
             </div>
             <div class="widget-content2">
                 <mat-list>
-                   <mat-list-item>
+                <mat-list-item>
                     <div matListItemTitle>Title</div>
                     <div matListItemLine>blah blah</div>
-                   </mat-list-item> 
-                   <mat-divider></mat-divider>
-                   <mat-list-item>
+                </mat-list-item> 
+                <mat-divider></mat-divider>
+                <mat-list-item>
                     <div matListItemTitle>Title</div>
                     <div matListItemLine>blah blah</div>
-                   </mat-list-item> 
-                   <mat-divider></mat-divider>
-                   <mat-list-item>
+                </mat-list-item> 
+                <mat-divider></mat-divider>
+                <mat-list-item>
                     <div matListItemTitle>Title</div>
                     <div matListItemLine>blah blah</div>
-                   </mat-list-item> 
-                   <mat-divider></mat-divider>
-                   <mat-list-item>
+                </mat-list-item> 
+                <mat-divider></mat-divider>
+                <mat-list-item>
                     <div matListItemTitle>Title</div>
                     <div matListItemLine>blah blah</div>
-                   </mat-list-item> 
-                   <mat-divider></mat-divider>
-                   <mat-list-item>
+                </mat-list-item> 
+                <mat-divider></mat-divider>
+                <mat-list-item>
                     <div matListItemTitle>Title</div>
                     <div matListItemLine>blah blah</div>
-                   </mat-list-item> 
-                   <mat-divider></mat-divider>
+                </mat-list-item> 
+                <mat-divider></mat-divider>
                 </mat-list>
             </div>
         </article>
@@ -128,4 +145,4 @@
             </mat-card>
         </article>
     </div>
-</div>
+</span>
