--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,2 +1,40 @@
 <!--TODO: Beautify-->
-<app-user></app-user>
+<form [formGroup]="profileForm" class="signup_form">
+    <mat-card-content>
+        <!--Username Field-->
+        <div class="row">
+            <div class="col-md-6">
+                 <mat-form-field class="full_width">
+                    <mat-label>Username: </mat-label>
+                    <input formControlName="username"  matInput placeholder="Username*" required>
+                </mat-form-field>
+                <div class="spacer"></div>
+            </div>
+        </div>
+        <!--Email Field-->
+        <div class="row">
+            <div class="col-md-6">
+                 <mat-form-field class="full_width">
+                    <mat-label>Email: </mat-label>
+                    <input formControlName="email"  matInput placeholder="Email*" required>
+                </mat-form-field>
+                <div class="spacer"></div>
+            </div>
+        </div>
+        <!--Password Field-->        
+        <div class="row">
+            <div class="col-md-6">
+                <mat-form-field class="full_width">
+                    <mat-label>Password: </mat-label>
+                    <input formControlName="password" matInput placeholder="Password*" required>
+                </mat-form-field>
+                <div class="spacer"></div>
+            </div>
+        </div>
+    </mat-card-content>
+    <!--Sign Up Button-->
+    <mat-card-actions>
+        <button mat-button routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign-In</button>
+        <button mat-raised-button (click)="addUser(this.profileForm.controls['username'].value || '', this.profileForm.controls['email'].value || '', this.profileForm.controls['password'].value || '')" color="accent" class="btn">Sign Up</button>
+    </mat-card-actions>
+</form>
