Added support for email

--- a/src/app/util/navbar/navbar.component.html
+++ b/src/app/util/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <button mat-button routerLink="/top-games" routerLinkActive="active" ariaCurrentWhenActive="page">Top Games</button>
     <button mat-button routerLink="/community" routerLinkActive="active" ariaCurrentWhenActive="page">Commmunity</button>
     <button mat-button routerLink="/about-us" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</button>
-    <button mat-raised-button color="accent" routerLink="/sign-up" routerLinkActive="active" ariaCurrentWhenActive="page">Sign Up</button>
+    <button mat-raised-button color="accent" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</button>
   </mat-toolbar>
 
   <router-outlet></router-outlet>
