Spec file testing bed configuration errors resolved.

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -6,7 +6,7 @@
             <div class="col-md-6">
                  <mat-form-field class="full_width">
                     <mat-label>Username: </mat-label>
-                    <input formControlName="username"  matInput placeholder="Username*" required>
+                    <input matInput formControlName="username" placeholder="Username*" required>
                 </mat-form-field>
                 <div class="spacer"></div>
             </div>
@@ -16,7 +16,7 @@
             <div class="col-md-6">
                  <mat-form-field class="full_width">
                     <mat-label>Email: </mat-label>
-                    <input formControlName="email"  matInput placeholder="Email*" required>
+                    <input matInput formControlName="email" placeholder="Email*" required>
                 </mat-form-field>
                 <div class="spacer"></div>
             </div>
@@ -26,7 +26,7 @@
             <div class="col-md-6">
                 <mat-form-field class="full_width">
                     <mat-label>Password: </mat-label>
-                    <input formControlName="password" matInput placeholder="Password*" required>
+                    <input matInput formControlName="password" placeholder="Password*" required>
                 </mat-form-field>
                 <div class="spacer"></div>
             </div>
