Addes search bar component & search bar to navbar

--- a/src/app/util/navbar/navbar.component.html
+++ b/src/app/util/navbar/navbar.component.html
@@ -1,6 +1,11 @@
 <mat-toolbar color="primary" class="toolbar">
     <span class="quest-logo"><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">QuestList</a></span>
     <div class="spacer"></div>
+
+    <app-search-bar class="search"></app-search-bar>
+
+    <div class="spacer"></div>
+
     <button mat-button routerLink="/top-games" routerLinkActive="active" ariaCurrentWhenActive="page">Top Games</button>
     <button mat-button routerLink="/community" routerLinkActive="active" ariaCurrentWhenActive="page">Commmunity</button>
     <button mat-button routerLink="/about-us" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</button>
