--- a/src/app/util/navbar/navbar.component.html
+++ b/src/app/util/navbar/navbar.component.html
@@ -9,7 +9,12 @@
     <button mat-button routerLink="/top-games" routerLinkActive="active" ariaCurrentWhenActive="page">Top Games</button>
     <button mat-button routerLink="/community" routerLinkActive="active" ariaCurrentWhenActive="page">Commmunity</button>
     <button mat-button routerLink="/about-us" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</button>
-    <button mat-raised-button color="accent" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</button>
+    <span *ngIf="!isLoggedIn">
+      <button mat-raised-button color="accent" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</button>
+    </span>
+    <span *ngIf="isLoggedIn">
+      <img src = "../../../assets/icon-profile.png" class = "profile-image">
+    </span>
   </mat-toolbar>
 
   <router-outlet></router-outlet>
