--- a/src/app/util/search-bar/search-bar.component.html
+++ b/src/app/util/search-bar/search-bar.component.html
@@ -7,7 +7,7 @@
            [formControl]="myControl"
            [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option" (click) = "redirectToGame(option)">
         {{option}}
       </mat-option>
     </mat-autocomplete>
