added menu to log out user and go to user profile

--- a/src/app/util/navbar/navbar.component.css
+++ b/src/app/util/navbar/navbar.component.css
@@ -19,3 +19,9 @@
   border-style: solid;
   border-color: black;
 }
+
+.profile-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
