Fixed home page img scale, formatting game page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,6 +29,12 @@ mat-grid-tile {
     border: 1px solid black;
 }
 
-.gameImage {
+
+img {
     width: 25%;
+    height: 200px;
+}
+
+.label1 {
+    padding: 10px;
 }
